<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/name"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/nameL"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/nameL" />

    <TextView
        android:id="@+id/nameL"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/loginL"
        app:layout_constraintTop_toBottomOf="@+id/loginL" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="7"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginL"
        app:layout_constraintStart_toEndOf="@+id/passwordL"
        app:layout_constraintTop_toTopOf="@+id/loginL" />

    <TextView
        android:id="@+id/loginL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordL"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/passwordL" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/passwordL2"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/passwordL2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/passwordL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/type_password"
        app:layout_constraintStart_toStartOf="@+id/loginL"
        app:layout_constraintTop_toBottomOf="@+id/nameL" />

    <TextView
        android:id="@+id/passwordL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password_again"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/passwordL"
        app:layout_constraintTop_toBottomOf="@+id/passwordL"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setAva"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:visibility="gone"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:text="@string/setAva"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="@+id/passwordL2"
        app:layout_constraintTop_toBottomOf="@+id/passwordL2"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
