<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.editors.NewPostFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/pickPlace"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_circle"
                app:tint="#A3B7F3" />

            <ImageView
                android:id="@+id/dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_circle"
                app:tint="#A3B7F3" />

            <ru.kot1.demo.activity.utils.LinedEditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:minLines="12" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/previewPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

                <ImageView
                    android:id="@+id/previewPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                     />

                <ImageView
                    android:id="@+id/remove_attach"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:tint="@null"
                    android:src="@drawable/ic_cancel" />
            </FrameLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/pickPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/placeL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/event_required" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/linkBtn"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_place"
            app:iconTint="@color/colorPrimary"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_link" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventTypeBtn"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_place"
            app:iconTint="@color/colorPrimary"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_menu" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dateBtn"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_place"
            app:iconTint="@color/colorPrimary"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_baseline_date_range_24" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_marginLeft="7dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            app:iconTint="@color/colorPrimary"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_photo_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            app:iconTint="@color/colorPrimary"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_camera_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mp3File"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            app:iconTint="@color/colorPrimary"
            app:icon="@drawable/ic_music" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mp4File"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            app:iconTint="@color/colorPrimary"
            app:icon="@drawable/ic_video" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>